# surcharger-un-reseau-wifi

./: .gitignore  AI_CONTEXT.md  GUIDE_GUI.md  MINI_PC_READY.md  QUICKSTART.md  README.md  SCRIPTS_README.md  SETUP_MINI_PC.md  pyproject.toml  receiver_test.csv  setup_mini_pc.ps1  setup_pc_principal.ps1  test_scripts.ps1
config/: example.yaml  mini_pc_template.yaml  pc_principal_template.yaml
reports/: report_20251014_190533.csv  report_20251014_191426.csv  report_20251014_191458.csv  report_20251014_191532.csv  report_20251014_192141.csv  report_20251014_192234.csv  report_20251014_192257.csv  report_20251014_192445.csv  report_20251014_193155.csv  report_20251014_193258.csv  report_20251014_193331.csv  report_20251014_194049.csv  report_20251014_194517.csv  report_20251014_194652.csv  report_20251014_194724.csv  report_20251014_194757.csv  report_20251014_194827.csv  report_20251015_110359.csv  stress_20251014_200528.csv  stress_20251014_201046.csv  stress_20251015_110534.csv
src/loadtester/: __init__.py  cli.py  config.py  generator.py  gui.py  iperf.py  metrics.py  receiver.py  report.py  runner.py  stress.py
src/wifi_loadtester.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_config.py
